syntax = "proto3";
package example.internal.conf;

option go_package = "gin_example/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  App app = 1;
  Data data = 2;
}

message App {
  string                   name = 1;
  string                   port = 2;
  google.protobuf.Duration timeout = 3;
  int32                    pageSize = 4;
  int32                    maxPageSize = 5;
  string                   uploadSavePath = 6;
  string                   uploadServerUrl = 7;
  int32                    uploadImageMaxSize = 8;
  repeated string          uploadImageAllowExts = 9;
  string                   traceName = 10;
  string                   tracePort = 11;
  google.protobuf.Duration wsWriteWait = 12;
  google.protobuf.Duration wsPongWait = 13;
  int64                    wsMaxMessageSize = 14;
  int32                    wsMessageQueue = 15;
  int32                    wsOfflineNum = 16;
  string                   jwtSecret = 17;
  string                   jwtIssuer = 18;
  google.protobuf.Duration jwtExpire = 19;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Database database = 1;
  Redis redis = 2;
}
